--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,16 @@ main {
   margin: 0 auto;
 }
 
+@layer base {
+  h1 {
+    @apply font-bold text-2xl;
+  }
+
+  h2 {
+    @apply font-bold text-xl;
+  }
+}
+
 .dropDownMenu {
   position: absolute;
   top: 4.5rem;
