--- a/src/index.css
+++ b/src/index.css
@@ -16,17 +16,17 @@ body {
 }
 
 main {
-  max-width: 1200px;
+  min-width: 1200px;
   margin: 0 auto;
 }
 
 @layer base {
   h1 {
-    @apply font-bold text-2xl;
+    @apply font-bold text-2xl my-4;
   }
 
   h2 {
-    @apply font-bold text-xl;
+    @apply font-bold text-xl my-3;
   }
 }
 
