--- a/src/index.css
+++ b/src/index.css
@@ -17,16 +17,17 @@ body {
 
 main {
   max-width: 1200px;
+  width: 100%;
   margin: 0 auto;
 }
 
 @layer base {
   h1 {
-    @apply font-bold text-2xl my-4;
+    @apply font-bold text-2xl;
   }
 
   h2 {
-    @apply font-bold text-xl my-3;
+    @apply font-bold text-xl;
   }
 }
 
